--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <app-toolbar
     title="Home"
     (menuButtonClicked)="toolbarMenuButtonClicked()"
-    [ngClass]="{'custom-dark-theme': darkMode}"
+    [ngClass]="{'dark-theme': darkMode}"
   ></app-toolbar>
   <app-sidenav
     fxFlex
     [opened]="drawerOpen"
-    [ngClass]="{'custom-dark-theme': darkMode}"
+    [ngClass]="{'dark-theme': darkMode}"
   ></app-sidenav>
-  <app-footer [ngClass]="{'custom-dark-theme': darkMode}"></app-footer>
+  <app-footer [ngClass]="{'dark-theme': darkMode}"></app-footer>
 </div>
