--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,46 @@
+// Import library functions for theme creation.
+@import '~@angular/material/theming';
+@import '../../styles/themes.scss';
+
+@mixin apply-mat-theme($config-or-theme, $background-palette: null) {
+  $config: mat-get-color-config($config-or-theme);
+  $is-dark-theme: map-get($config, is-dark);
+  $primary: map-get($config, primary);
+  $accent: map-get($config, accent);
+
+  @if $is-dark-theme {
+    color: $light-secondary-text;
+    @if $background-palette == primary {
+      background-color: mat-color($primary, 900);
+      border-color: mat-color($primary, A700);
+    } @else if $background-palette == accent {
+      background-color: mat-color($accent, 900);
+      border-color: mat-color($accent, A700);
+    } @else {
+      background-color: mat-color($mat-gray, 900);
+      border-color: mat-color($mat-gray, 900);
+    }
+  } @else {
+    color: $dark-secondary-text;
+    @if $background-palette == primary {
+        background-color: mat-color($primary, 200);
+        border-color: mat-color($primary, A200);
+      } @else if $background-palette == accent {
+        background-color: mat-color($accent, 200);
+        border-color: mat-color($accent, A200);
+      } @else {
+        background-color: whitesmoke;
+        border-color: lightslategray;
+      }
+  }
+}
+
 :host {
-    padding: 0.5rem;
+  padding: 0.5rem 1rem;
+}
+:host:not(.dark-theme) {
+  @include apply-mat-theme($light-theme, accent);
+}
+:host(.dark-theme) {
+  @include apply-mat-theme($dark-theme);
 }
