--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,7 @@
 // Import library functions for theme creation.
 @import '~@angular/material/theming';
-@import '../../styles/themes.scss';
+@import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
 
 :host {
     padding: 0.5rem 1rem;
