--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar [class.mat-primary]="color =='primary'" [class.mat-accent]="color =='accent'">
+<mat-toolbar [class.mat-primary]="darkMode != true" [class.mat-accent]="color =='accent'">
   <button
     mat-icon-button
     matTooltip="Info about the action"
