--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -1,7 +1,18 @@
+// Import library functions for theme creation.
+@import '~@angular/material/theming';
+@import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
+
 #toolbar-title {
     margin-left: 1rem;
     margin-right: 1rem;
 }
 :host .spacer {
     flex: 1 1 auto;
+}
+:host(.dark-theme) {
+    mat-toolbar {
+        background-color: #333;
+        @include apply-theme-color($dark-theme, primary, lighter);
+    }
 }
