--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,6 @@ html, body {
     height: 100%;
     margin: 0;
 }
-body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
