--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,21 +6,20 @@
           <a
             routerLink="/work-history"
             routerLinkActive="active"
-            class="mat-subheading-2"
+            class="mat-body-1"
             (click)="routeClicked('Work')"
           >Work History</a></li>
         <li>
           <a
             routerLink="/education-history"
             routerLinkActive="active"
-            class="mat-subheading-2"
+            class="mat-body-1"
             (click)="routeClicked('Education')"
           >Education History</a></li>
         <li>
           <a
             routerLink="/project-history"
             routerLinkActive="active"
-            class="mat-subheading-2"
             (click)="routeClicked('Projects')"
             >Project History</a></li>
       </ul>
