--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,5 @@
     [ngClass]="{'dark-theme': darkMode}"
     (routeClick)="sidenavRouteClicked($event)"
   ></app-sidenav>
-  <app-footer [ngClass]="{'dark-theme': darkMode}" [class.mat-primary]="darkMode != true"></app-footer>
+  <app-footer [ngClass]="{'dark-theme': darkMode}"></app-footer>
 </div>
