--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,32 +1,18 @@
 // Import library functions for theme creation.
 @import '~@angular/material/theming';
 @import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import '../../styles/functions.scss';
 
 :host {
-    transition: background-color 666ms ease-in-out;
+    transition: background-color 666ms ease-in-out, color 300ms ease-in-out, box-shadow 666ms ease-in-out;
     padding: 0.5rem 1rem;
 }
 :host:not(.dark-theme) {
     z-index: 2;
     box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.5);
+    background-color: mat-theme-color($light-theme);
 }
-:host(.mat-primary):not(.dark-theme) {
-    @include apply-mat-theme($light-theme, primary);
-}
-:host(.mat-accent):not(.dark-theme) {
-    @include apply-mat-theme($light-theme, accent);
-}
-:host:not(.dark-theme):not(.mat-primary):not(.mat-accent) {
-    @include apply-mat-theme($light-theme);
-}
-:host(.dark-theme.mat-primary) {
-    @include apply-mat-theme($dark-theme, primary);
-}
-:host(.dark-theme.mat-accent) {
-    @include apply-mat-theme($dark-theme, accent);
-}
-:host(.dark-theme):not(.mat-primary):not(.mat-accent) {
+:host(.dark-theme) {
     background-color: #333;
-    @include apply-theme-color($dark-theme, primary, lighter);
+    color: mat-theme-color($dark-theme, primary, lighter);
 }
