--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,13 +4,14 @@
 @import '../../styles/functions.scss';
 
 :host {
-    transition: background-color 666ms ease-in-out, color 300ms ease-in-out, box-shadow 666ms ease-in-out;
+    transition: trans-color-bgcolor();
     padding: 0.5rem 1rem;
 }
 :host:not(.dark-theme) {
-    z-index: 2;
+    z-index: 1;
     box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.5);
     background-color: mat-theme-color($light-theme);
+    color: $light-secondary-text;
 }
 :host(.dark-theme) {
     background-color: #333;
