--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -5,7 +5,7 @@
           <mat-card-subtitle>{{employment.subheader}}</mat-card-subtitle>
           <mat-card-subtitle>{{employment.summary}}</mat-card-subtitle>
         </mat-card-header>
-        <!-- img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" -->
+        <img mat-card-image [src]="employment.image">
         <mat-card-content>
           <ul *ngFor="let detail of employment.list; index as j;">
             <li>{{detail}}</li>
