--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxFlexFill fxLayout="column">
+<div id="app-container">
   <app-toolbar
     [title]="currentRoute"
     (menuButtonClicked)="toolbarMenuButtonClicked()"
@@ -7,7 +7,6 @@
     [darkMode] = "darkMode"
   ></app-toolbar>
   <app-sidenav
-    fxFlex
     [opened]="drawerOpen"
     [ngClass]="{'dark-theme': darkMode}"
     (routeClick)="sidenavRouteClicked($event)"
