--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,4 +1,5 @@
-<mat-drawer-container autosize>
+<!-- mat-drawer-container autosize -->
+<mat-drawer-container >
   <mat-drawer #drawer mode="side" [opened]="opened">
     <nav>
       <ul id="router-links">
