--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -25,24 +25,11 @@
     }
 }
 :host:not(.dark-theme) {
-    z-index: 2;
+    z-index: 2; // needed for box-shadow
     position: relative; /* For positioning the pseudo-element */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-    &::before {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        content: '';
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.25);
-        opacity: 0; // Hidden by default.
-        transition: opacity 500ms;
-    }
-    &:hover {
-        &::before {
-            opacity: 1;
-        }
+    mat-toolbar {
+        position: relative; /* For positioning the pseudo-element */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
     }
     mat-toolbar {
         background-color: mat-theme-color($light-theme);
