--- a/src/app/education-history/education-history.component.html
+++ b/src/app/education-history/education-history.component.html
@@ -1,18 +1,21 @@
 <div fxFlexFill fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-    <mat-card *ngFor="let employment of data; index as i;" fxFlex.lt-sm="100" fxFlex.sm="75" fxFlex.md="45" fxFlex.gt-md="30">
-        <mat-card-header>
-          <mat-card-title>{{employment.title}}</mat-card-title>
-          <mat-card-subtitle>{{employment.subheader}}</mat-card-subtitle>
-          <mat-card-subtitle>{{employment.summary}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image [src]="employment.image">
-        <mat-card-content>
-          <ul *ngFor="let detail of employment.list; index as j;">
-            <li>{{detail}}</li>
-          </ul>
-        </mat-card-content>
-        <mat-card-actions>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card *ngFor="let institution of data; index as i;" fxFlex.lt-sm="100" fxFlex.sm="75" fxFlex.md="45" fxFlex.gt-md="30">
+    <mat-card-header>
+      <mat-card-title>{{institution.title}}</mat-card-title>
+      <mat-card-subtitle>{{institution.subheader}}</mat-card-subtitle>
+      <mat-card-subtitle>{{institution.gpa}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="institution.image">
+    <div *ngIf="institution.details">
+      <mat-card-content >
+        <ul *ngFor="let detail of institution.list; index as j;">
+          <li>{{detail}}</li>
+        </ul>
+      </mat-card-content>
+    </div>
+    <div *ngIf="institution.links">
+      <mat-card-actions></mat-card-actions>
+    </div>
+  </mat-card>
 </div>
   
