--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -1,18 +1,27 @@
 <div id="work-history-container" flexFill fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-    <mat-card *ngFor="let employment of data; index as i;" fxFlex.lt-sm="100" fxFlex.sm="75" fxFlex.md="45" fxFlex.gt-md="30">
-        <mat-card-header>
-          <mat-card-title>{{employment.title}}</mat-card-title>
-          <mat-card-subtitle>{{employment.subheader}}</mat-card-subtitle>
-          <mat-card-subtitle>{{employment.summary}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image [src]="employment.image">
-        <mat-card-content>
-          <ul *ngFor="let detail of employment.list; index as j;">
+  <mat-card *ngFor="let employment of data; index as i;" fxFlex.lt-sm="100" fxFlex.sm="75" fxFlex.md="45" fxFlex.gt-md="30">
+    <mat-card-header>
+      <mat-card-title>{{employment.title}}</mat-card-title>
+      <mat-card-subtitle>{{employment.subheader}}</mat-card-subtitle>
+      <mat-card-subtitle>{{employment.summary}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="employment.image">
+    <mat-card-content>
+      <div *ngIf="employment.details">
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title></mat-panel-title>
+            <mat-panel-description>Details</mat-panel-description>
+          </mat-expansion-panel-header>
+          <ul *ngFor="let detail of employment.details; index as j;">
             <li>{{detail}}</li>
           </ul>
-        </mat-card-content>
-        <mat-card-actions>
-        </mat-card-actions>
-    </mat-card>
+        </mat-expansion-panel>
+      </div>
+    </mat-card-content>
+    <div *ngIf="employment.links">
+      <mat-card-actions></mat-card-actions>
+    </div>
+  </mat-card>
 </div>
   
